# yarn-hoard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  index.html
api/: Cargo.toml
api/client/: Cargo.toml
api/client/src/: lib.rs
api/server/: Cargo.toml
api/server/src/: app.rs  client.rs  database.rs  lib.rs  main.rs
api/server/src/endpoints/: confirm.rs  health_check.rs  users.rs
api/server/tests/endpoints/: confirm.rs  users.rs
api/server/tests/helpers/test_app/: mod.rs
api/server/tests/helpers/test_app/run/: mod.rs
api/src/: main.rs
api/tests/helpers/test_app/setup/: mod.rs
backend/: Cargo.toml  Dockerfile  Makefile
backend/entity/src/: lib.rs
backend/entity/src/entities/: confirmations.rs  mod.rs  users.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250318_233214_create_users_table.rs  m20250406_162007_create_confirmations_table.rs
backend/migrations/: 20250317015457_enables_extensions.sql  20250317024139_adds_users_table.sql
backend/src/: app.rs  database.rs  health_check.rs  jsonapi.rs  lib.rs  main.rs  users.rs
backend/src/endpoints/: confirm.rs  mod.rs  users.rs
backend/src/lib/: app.rs  auth.rs  confirm.rs  database.rs  json_api.rs  lib.rs  users.rs
backend/tests/endpoints/: users.rs
backend/tests/helpers/: mod.rs
entity/: Cargo.toml
entity/src/entities/: prelude.rs  users.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  client.rs  lib.rs  main.rs  password.rs  util.rs
frontend/src/atoms/: button.css  button.rs  card.css  card.rs  icon.css  icon.rs  mod.rs  toast.css  toast.rs
frontend/src/molecules/: email_input.css  email_input.rs  password_input.css  password_input.rs
frontend/src/organisms/: login_form.rs  signup_form.css  signup_form.rs
frontend/src/pages/: confirm.rs  login.rs  mod.rs  signup.rs
frontend/src/styles/: main.css
migration/src/: m20250318_233214_create_users_table.rs
site/: Cargo.toml  Trunk.toml  index.html
site/src/: app.rs  lib.rs  main.rs
site/src/atoms/: button.rs  card.rs  mod.rs
site/src/molecules/: email_input.rs  mod.rs  password_input.rs
site/src/organisms/: login_form.rs  signup_form.rs
site/src/pages/: landing.rs  login.rs  mod.rs  signup.rs
site/styles/: main.css
src/lib/: app.rs  health_check.rs  jsonapi.rs  lib.rs  users.rs
src/lib/api/: app.rs  mod.rs
src/lib/api/endpoints/: confirm.rs  users.rs
src/lib/endpoints/: users.rs
src/lib/frontend/: app.rs  mod.rs
src/lib/frontend/atoms/: button.rs
src/lib/frontend/molecules/: email_input.rs  password_input.rs
src/lib/frontend/organisms/: login_form.rs  mod.rs  signup_form.rs
src/lib/frontend/pages/: login.rs  signup.rs
src/lib/frontend/styles/: main.css
tests/: integration.rs
tests/endpoints/: confirm.rs  mod.rs  users.rs
tests/helpers/: mod.rs
tests/helpers/test_app/: mod.rs
tests/helpers/test_app/assert/: mod.rs
tests/helpers/test_app/setup/: mod.rs
