[package]
name = "yarn-hoard"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "1"
members = [ "backend", "entity", "frontend", "migration" ]

[workspace.dependencies]
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
