[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
entity = { path = "../entity" }
hex = "0.4.3"
migration = { path = "../migration" }
openssl = { version = "0.10.71", features = [ "vendored" ] }
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 
thiserror = { workspace = true } 
tokio = "1.44.1"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = { workspace = true } 
tracing-subscriber = "0.3.19"
