[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
entity = { workspace = true }
hex = "0.4.3"
migration = { path = "../migration" }
openssl = { version = "0.10.71", features = [ "vendored" ] }
sea-orm = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 
thiserror = { workspace = true } 
tokio = { workspace = true }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = { workspace = true } 
tracing-subscriber = "0.3.19"
