[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
api-client = { path = "../api/client" }
sycamore = { version = "0.9.1", features = ["suspense"] }
sycamore-router = "0.9.1"
console_error_panic_hook = "0.1.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(sycamore_force_ssr)"] }
