[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal
entity = { path = "../../entity" }
migration = { path = "../../migration" }

# External
anyhow = "1.0.97"
axum = "0.8.1"
hex = "0.4.3"
openssl = { version = "0.10.71", features = [ "vendored" ] }
reqwest = { version = "0.12.15", features = ["json"] }
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1" }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
